FinalProject/css/style.css
:root{
    --main-colour:#2a3024;
    --contrast-colour:#17569a;
}
body{
    margin:0;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}
#skip-link{
    position:absolute;
    left:0;
    top:-50px;
}
#skip-link:focus{
    top:0px;
}
nav ul{
    display:flex;
    justify-content: space-around;
    list-style-type: none;
}
nav a{
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 4vw;
    text-decoration: none;
    position:relative;
    top:0px;
    transition:text-shadow .2s, top .5s;
}
nav a:hover{
    text-shadow: rgba(105, 200, 215, 0.3) 0px 3px 15px;
    top: -5px;
}
.current-page{
    opacity:.75;
}
a{
    color: var(--contrast-colour);
}
h1{
    padding: 0 5%;
    font-size: min(5vw, 40px);
    color: var(--contrast-colour);
}
p{
    color:var(--main-colour);
    font-size: min(3vw, 18px);
}
.intro{
    padding: 0 5vw;
}
.image-grid{
    display: grid;
    grid-template-columns: 30% 30% 30%;
    justify-content: center;
    align-items: center;
    gap: 1vw;
}
.image-grid img{
    box-sizing: border-box;
    width: 100%;
    max-height: 400px;
    object-fit: cover;
    border-radius: 10%;
    padding: 1%;
    transition: border-radius 0.5s, box-shadow 0.3s, transform 0.3s, padding 0.3s;
}
.image-grid img:hover{
    padding:0px;
    border-radius: 2%;
    box-shadow: rgba(150, 150, 150, 0.7) 0px 5px 10px;
    transform:scale(1.05, 1.05);
}
.image-grid :nth-child(odd){
    transform:rotatez(1deg);
}
.image-grid :nth-child(even){
    transform: rotatez(-1deg);
}
footer{
    margin-top:25px;
    height:200px;
    background-image: url(../images/Mountains_mountains.jpg);
    background-position:center;
    background-size: cover;
    padding: 2%;
    opacity: .8;
    text-shadow: rgba(0,0,0,0.9) 0px 0px 5px;
    color: white;
    align-content:end;
}

